--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 <body>
     <div class="license-plate">
-        ABC-1234
+       Linked List (open the console..)
     </div>
 
     <script type="module" src="./main.js"></script>
